--- a/index.html
+++ b/index.html
@@ -3,99 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElevateHub Notification</title>
+    <title>About Us</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #f7f7f7;
         }
-        header {
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            padding: 20px;
-        }
-        .section {
-            width: 45%;
-            background-color: #fff;
-            padding: 20px;
-            margin: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .section h2 {
-            color: #3498db;
-        }
-        .section p {
-            color: #777;
-        }
-        footer {
+        .header {
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 1rem;
         }
-        a {
-            color: #3498db;
-            text-decoration: none;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+            text-align: center;
         }
-        a:hover {
-            text-decoration: underline;
+        .section {
+            padding: 2rem;
+            background-color: white;
+            border-radius: 10px;
+            margin: 2rem 0;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-        .news {
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 8px;
-            margin-top: 20px;
+        .leaders {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
         }
-        .news h3 {
-            color: #333;
+        .leader {
+            flex: 1;
+            padding: 1rem;
         }
-        .news p {
-            color: #555;
+        .info {
+            text-align: left;
+            padding: 2rem;
         }
     </style>
 </head>
-<body >
-    <header>
-        <img src="https://see.fontimg.com/api/renderfont4/X3v0P/eyJyIjoiZnMiLCJoIjo3NiwidyI6MjAwMCwiZnMiOjM4LCJmZ2MiOiIjRTAxMDEwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/RWxldmF0ZUh1YiBOb3RpZmljYXRpb24/the-future.png" width=100%>
-    </header>
+<body>
+    <div class="header">
+        <h1>About Us</h1>
+    </div>
     <div class="container">
         <div class="section">
-            <h2>Join Organization</h2>
-            <p><a href="https://xtr-platinum.formaloo.net/cch25"><font color=red>Click here</font></a></p>
+            <h2>Our Journey</h2>
+            <p>ElevateHub's genesis saw three leaders forging a path through relentless determination. Their tireless work laid the foundation for transformative programs, igniting a market revolution. Today, ElevateHub's innovative approach commands attention and disrupts norms, making it a market powerhouse, while its inception tale remains a beacon of inspiration.</p>
         </div>
         <div class="section">
-            <h2>Ask Questions</h2>
-            <p><a href="https://satyam914.github.io/Review/"><font color=red>Click here</font></a></p>
+            <h2>Our Visionary Leaders</h2>
+            <div class="leaders">
+                <div class="leader">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 1">
+                    <h3>Leader 1</h3>
+                    <p>MR.EXTRME</p>
+                </div>
+                <div class="leader">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 2">
+                    <h3>Leader 2</h3>
+                    <p>MR.VERIT</p>
+                </div>
+                <div class="leader">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 3">
+                    <h3>Leader 3</h3>
+                    <p>MR.APEX</p>
+                </div>
+            </div>
         </div>
         <div class="section">
-            <h2>Complain bugs</h2>
-            <p><a href="mailto:fulsome.society.of.extrme.and.ssy@gmail.com"><font color=red>Click here</font></a></p>
-        </div>
-        <div class="section">
-            <h2>Attendance</h2>
-            <p><a href="https://satyam914.github.io/Attendance-sheet/"><font color=red>Click here</font></a></p>
+            <h2>Our Achivements</h2>
+            <p>we are achieve in music field, movies, taxitapp, shopping and etc...</p>
         </div>
     </div>
-    <div class="news">
-        <h3><font color=red><u>Notice</u></h3></font>
-        <font color=Blue>Check Notification section daily for update specially client and staff bot.h <br>Thanks & Regard<br>Verit
-        </font></div>
-        <center><font color=Gold size=6>Ads By Adsense</font>
-<script async="async" data-cfasync="false" src="//pl20197101.highcpmrevenuegate.com/9870af56e999c84daa7f6d118c87d76e/invoke.js"></script>
-<div id="container-9870af56e999c84daa7f6d118c87d76e"></div>
-</center>
-    <footer>
-        <p>&copy;<font color=yellow>2023 ElevateHub Notification. All rights reserved.</p>
-    </footer>
 </body>
 </html>
