--- a/index.html
+++ b/index.html
@@ -1,84 +1,218 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
-        }
-        .header {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-            text-align: center;
-        }
-        .section {
-            padding: 2rem;
-            background-color: white;
-            border-radius: 10px;
-            margin: 2rem 0;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .leaders {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        .leader {
-            flex: 1;
-            padding: 1rem;
-        }
-        .info {
-            text-align: left;
-            padding: 2rem;
-        }
-    </style>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' 
+  rel='stylesheet'>
 </head>
+ <!--[ Creator Aashu ]-->
+ <style>
+   *{
+  margin: 0;
+  padding: 0;
+  font-family:'Segoe UI', Tahoma, 
+  Geneva, Verdana, sans-serif;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #222;
+  color: #fff;
+  overflow-y: hidden;
+}
+
+.container{
+  height: 470px;
+  width: 350px;
+  border: 2px solid;
+  border-left-color: #0cf;
+  border-right-color: #0cf;
+  border-top-color: #d80aa8;
+  border-bottom-color: #d80aa8;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items:center;
+  flex-direction: column;
+  position: relative;
+}
+
+.container .image-section{
+  height: 100%;
+  width: 100%;
+  background: 
+  linear-gradient(#0cf,#d80aa8,#0cf,#d80aa8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: .6s ease;
+  overflow: hidden;
+}
+
+.container:hover .image-section{
+  top: 5%;
+  height: 280px;
+  width: 280px;
+  border-radius: 50%;
+}
+
+img{
+  width: 250px;
+  border-radius: 50%;
+  background: #021a2f;
+}
+
+.text-content{
+  text-align: center;
+  color: #fff;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  opacity: 0;
+  transition: .5s;
+}
+
+.container:hover .text-content{
+  opacity: 1;
+  transition-delay: .5s;
+}
+
+.text-content span:nth-child(1){
+  letter-spacing: 1px;
+  font-size: 32px;
+}
+
+.container:hover span:nth-child(1){
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+}
+
+@keyframes TopSlide{
+  0%{
+    transform: translateY(200px);
+    opacity: 0;
+    filter: blur(5px);
+  }
+  100%{
+    transform: translateY(00px);
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+.text-content span:nth-child(2){
+  letter-spacing: 1px;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.container:hover span:nth-child(2){
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+  animation-delay: .2s;
+}
+
+.text-content p{
+  font-size: 13px;
+  max-width: 300px;
+  margin-bottom: 10px;
+}
+
+.container:hover p{
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+  animation-delay: .4s;
+}
+
+.btn{
+  height: 35px;
+  width: 100px;
+  font-size: 15px;
+  font-weight: 500;
+  background: #222;
+  color: #0cf;
+  border: 2px solid #0cf;
+  cursor: pointer;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  transition: .5s;
+}
+
+.container:hover .btn{
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+  animation-delay: .6s;
+}
+
+.btn:hover{
+  background: #0cf;
+  color: #222;
+  box-shadow: 0 0 10px #0cf;
+}
+
+.social-media{
+  display: flex;
+}
+
+.social-media i{
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  border: 2px solid #0cf;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: #0cf;
+  margin-left: 20px;
+  transition: .4s;
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+  animation-delay: .8s;
+}
+
+.container:hover .social-media{
+  animation: TopSlide 1s ease forwards;
+  opacity: 0;
+  animation-delay: .8s;
+}
+
+.social-media i:hover{
+  box-shadow: 0 0 10px #0cf;
+  color: #222;
+  background: #0cf;
+
+}
+ </style>
 <body>
-    <div class="header">
-        <h1>About Us</h1>
+  <div class="container">
+    <div class="image-section">
+      <img src="https://i.ibb.co/bsC9JDH/IMG-20230524-201113-202-removebg-preview.png" alt="">
     </div>
-    <div class="container">
-        <div class="section">
-            <h2>Our Journey</h2>
-            <p>ElevateHub's genesis saw three leaders forging a path through relentless determination. Their tireless work laid the foundation for transformative programs, igniting a market revolution. Today, ElevateHub's innovative approach commands attention and disrupts norms, making it a market powerhouse, while its inception tale remains a beacon of inspiration.</p>
-        </div>
-        <div class="section">
-            <h2>Our Visionary Leaders</h2>
-            <div class="leaders">
-                <div class="leader">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 1">
-                    <h3>Leader 1</h3>
-                    <p>MR.EXTRME</p>
-                </div>
-                <div class="leader">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 2">
-                    <h3>Leader 2</h3>
-                    <p>MR.VERIT</p>
-                </div>
-                <div class="leader">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRp78gn0jDTRKfAraI8BAFczvg7y6w2jeVgww&usqp=CAU" alt="Leader 3">
-                    <h3>Leader 3</h3>
-                    <p>MR.APEX</p>
-                </div>
-            </div>
-        </div>
-        <div class="section">
-            <h2>Our Achivements</h2>
-            <p>we are achieve in music field, movies, taxitapp, shopping and etc...</p>
-        </div>
+    <div class="text-content">
+      <span>SATYAM YADAV</span>
+      <span><font color=red>[OWNER OF SSY BRAND]</font></span>
+       <p>
+         "Fueling Success, Shaping Tomorrow  Empowering You with SSY's Vision!"
+       </p><a href="https://satyam914.github.io/Ownertable-02/">
+      <button class="btn">Read more</button></a>
+      <div class="social-media">
+        <i class='bx bxl-instagram-alt'></i>
+        <i class='bx bxl-facebook-circle'></i>
+        <i class='bx bxl-twitter'></i>
+        <i class='bx bxl-youtube'></i>
+      </div>
     </div>
+  </div>
 </body>
 </html>
